[package]
name = "imp"
version = "0.1.0"
authors = ["Jamie Brandon <jamie@scattered-thoughts.net>"]

[dependencies]
rand = "*"
time = "*"
peg = { git = "https://github.com/kevinmehall/rust-peg.git" }

[dependencies.regex]
version = "*"
features = ["pattern"]

[profile.release]
debug = true

[profile.bench]
debug = false
debug-assertions = false