[package]
name = "imp"
version = "0.1.0"
authors = ["Jamie Brandon <jamie@scattered-thoughts.net>"]

[dependencies]
websocket = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
maud = "*"
pulldown-cmark = "*"
regex = "*"
csv = "1.0.0-beta.4"

[dependencies.nom]
version = "*"
features = ["verbose-errors", "nightly"]