[package]
name = "imp"
version = "0.1.0"
authors = ["Jamie Brandon <jamie@scattered-thoughts.net>"]

[dependencies]
websocket = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
bincode = "*"
maud = "*"
pulldown-cmark = "*"
regex = "*"
csv = "1.0.0-beta.4"
timely = "*"
abomonation = "*"
lazy_static = "0.2"
log = "*"
env_logger = "*"

[dependencies.nom]
version = "*"
features = ["verbose-errors", "nightly"]

[dependencies.graph_map]
git="https://github.com/frankmcsherry/graph-map.git"

[dependencies.differential-dataflow]
git="https://github.com/frankmcsherry/differential-dataflow.git"