[package]
name = "imp_demo"
version = "0.1.0"
authors = ["Jamie Brandon <jamie@scattered-thoughts.net>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
imp_language = { path = "../imp_language" }
wasm-bindgen = "*"
console_error_panic_hook = "*"

[dependencies.js-sys]
version = "*"
# features = []

[dependencies.web-sys]
version = "*"
features = [
  "console",
  "Document",
  "HtmlCollection",
  "Window",
  "HtmlElement",
  "HtmlTextAreaElement",
  "Element",
  "CssStyleDeclaration",
  "Node",
  "Text",
  "Location",
  "Event",
  "EventTarget",
]
